service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-site
spec:
  selector:
    app: hello-site
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
